For the next release
--------------------

- FEST-404 : Filter API on iterable/array
- FEST-470 : Lenient Equals (allows specifying on which properties equality should be performed)
- FEST-447 : Increase ComparableAssert API flexibility 
- FEST-478 : Add support for parametrized types in AbstractAssert
- FEST-221 : Array and Iterable new assertion : hasSameSizeAs
- FEST-481 : isIn() and isNotIn() assertions should take Iterable<?> instead of Collection<?>

2.0M2 release notes 
-------------------

- github#9 : Allow custom assertions to have access to their description using descriptionText()


2.0M1 release notes 
-------------------

- Date assertions : 28 assertions !
- Using a custom comparator instead of equals() to compare objects in assertions
- Assertions class now exposes all assertions related API : assertThat, fail API, entry for Map assertions and anyOf condition
- Richer conditions : has, are, areAtLeast, areAtMost, ...
- OR assertions with anyOf conditions
- isEqualTo assertion error message improvement
- Iterable assertions
- InputStream assertions
- 3 new exception assertions : hasMessageStartingWith, hasMessageContaining, hasMessageEndingWith
- When an assertion fails, the exception stack is filtered to avoidshowing fest stack trace elements
- New List and array assertion : isSorted
- isGreaterThan, isLessThan, isGreaterThanOrEqualTo and isLessThanOrEqualTo work now with primitive wrappers
- Fail API : fail() method removed
- Fail API learned failBecauseExceptionWasNotThrown(exception class)
- New collection/array assertions : containsNull, doesNotContainNull
- New collection assertions : isSubsetOf

Jira release note :
http://jira.codehaus.org/secure/ReleaseNote.jspa?projectId=11920&version=18363


1.4 -> 2.0 Migration guide
--------------------------
Migration steps are detailed in Fest Assertions github wiki :
https://github.com/alexruiz/fest-assert-2.x/wiki/Migrating-from-fest-assert-1.4