@@ -54,12 +54,12 @@ public class ShouldNotBeBetween extends BasicErrorMessageFactory {
   public static ErrorMessageFactory shouldNotBeBetween(Date actual, Date start, Date end, boolean inclusiveStart,
       boolean inclusiveEnd) {
     return new ShouldNotBeBetween(actual, start, end, inclusiveStart, inclusiveEnd,
-        StandardComparisonStrategy.instance());
+                                  StandardComparisonStrategy.instance());
   }
 
   private ShouldNotBeBetween(Date actual, Date start, Date end, boolean inclusiveStart, boolean inclusiveEnd,
       ComparisonStrategy comparisonStrategy) {
-    super("expected:<%s> not to be in period %s%s, %s%s%s", actual, inclusiveStart ? "[" : "]", start,
-        inclusiveEnd ? "]" : "[", end, comparisonStrategy);
+    super("expected:<%s> not to be in period %s%s, %s%s%s", actual, inclusiveStart ? '[' : ']', start, end, inclusiveEnd ? ']'
+        : '[', comparisonStrategy);
   }
 }
